--- a/style.css
+++ b/style.css
@@ -16,20 +16,28 @@ body {
 }
 
 .location {
-  height: 30vh;
+  height: 40vh;
   width: 50%;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border: 1px solid yellow;
   flex-direction: column;
 }
 
 .location-header {
   display: flex;
-  border: 1px solid red;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
+  padding: 10px;
+}
+
+.location-subheader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 100%;
   width: 100%;
 }
 
@@ -39,7 +47,6 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border: 1px solid red;
   flex-direction: column;
 }
 
