--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .location {
-  height: 40vh;
+  height: 80vh;
   width: 50%;
   display: flex;
   justify-content: space-around;
@@ -24,15 +24,24 @@ body {
   flex-direction: column;
 }
 
+.data {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 70%;
+  border: 3px solid white;
+}
 .location-header {
   display: flex;
+  border: 3px solid white;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   padding: 10px;
 }
 
-.location-subheader {
+.details, .description {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -41,13 +50,8 @@ body {
   width: 100%;
 }
 
-.temperature{
-  height: 30vh;
-  width: 50%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
+.details {
+  border-right: 3px solid white;
 }
 
 
